--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "site": "diplomado-mod5-dev-c9",
-    "public": "public",
+    "public": "dist/project/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
